--- a/contribute.html
+++ b/contribute.html
@@ -107,8 +107,10 @@
 							</div>
 							<p>Creating a bug report helps us improve. Providing required info, steps to replicate, and expected vs. actual behaviour you give us valuable info to understand the problem.
 							   <br/><br/>Create now a <a href="https://github.com/MichaIng/DietPi/issues/new?template=bug_report.md" target="_blank" rel="noopener">GitHub issue</a>.
-							   <br/>Security is on top of our list. Please report any security vulnerability shipped with our images or created by our scripts (in /boot/dietpi/). Please find more details in our <a href="https://github.com/MichaIng/DietPi/security/policy" target="_blank" rel="noopener">Security Policy</a>.
 							</p>
+							<p>
+							   Security is on top of our list. Please report any security vulnerability shipped with our images or created by our scripts (in /boot/dietpi/). For more details check our <a href="https://github.com/MichaIng/DietPi/security/policy" target="_blank" rel="noopener">Security Policy</a> guide.
+							</p>   
 						</div>
 					</div>
 				</div>
@@ -146,12 +148,12 @@
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>Give help / Answer questions</h3>
+								<h3>Answer questions / Provide insights</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p>Start a discussion, ask and answer questions. There are many questions on GitHub, and also on Forum for which you have already the answers, or you could provide valuable insights.</p>
+							<p>Start a discussion, ask and answer questions. There are many questions on <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi GitHub</a>, and also on <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener">Forum</a> for which you may have already the answers, or you could provide valuable insights.</p>
 							<p>
-								<br/><br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or open <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener"></a>DietPi Forums</a> and find these items.
+								<br/><br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or browse different conversation topics on <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener"></a>DietPi Forums</a> and find the ones that interest you the most.
 							</p>
 						</div>
 					</div>
@@ -174,8 +176,8 @@
 									<li>A driver installation for a specific SBC</li>
 									<li>or check of a performance tweak.</li>
 								</ul>
-								Browse <a href="https://github.com/MichaIng/DietPi/issues?q=is:open+is:issue+label:%22Help+wanted+:sos:%22+label:%22Testing/testers+required+:arrow_down_small:%22" target="_blank" rel="noopener"><i>Help wanted !</i> or <i>Testing Required</i></a> in DietPi issues on GitHub.</p>
 							</p>
+							<p>Browse <a href="https://github.com/MichaIng/DietPi/issues?q=is:open+is:issue+label:%22Help+wanted+:sos:%22+label:%22Testing/testers+required+:arrow_down_small:%22" target="_blank" rel="noopener"><i>Help wanted !</i> or <i>Testing Required</i></a> in DietPi issues on GitHub.</p>
 						</div>
 					</div>
 				</div>
@@ -192,7 +194,7 @@
 							</div>
 							<p>Web development is a dynamic and challenging field. Someone with skills in graphics and web design could provide a help to the overall online presence of this open source project.</p>
 							<p>Have you seen something on the website which could be improved ? Do you have web design skills and you would like to help ?</p>
-							<p>We  welcome your help to further expand the website. Please check on <a href="https://github.com/MichaIng/DietPi-Website" target="_blank" rel="noopener">How to Contribute</a></p>
+							<p>We  welcome your help to further expand the website. Please check on <a href="https://github.com/MichaIng/DietPi-Website" target="_blank" rel="noopener">How to Contribute on DietPi-Website project</a>.</p>
 						</div>
 					</div>
 				</div>
@@ -208,7 +210,7 @@
 								<span class="show_hide close"></span>
 							</div>
 							<p>This is an ever growing topic. Please join us to update documentation, bringing more examples and details, making the project easy to use and access.</p>
-							<p>Please check on <a href="https://github.com/MichaIng/DietPi-Docs" target="_blank" rel="noopener">How to Contribute</a></p>
+							<p>Please check <a href="https://github.com/MichaIng/DietPi-Docs" target="_blank" rel="noopener">How to Contribute on DietPi-Docs project</a>.</p>
 						</div>
 					</div>
 				</div>
@@ -225,7 +227,7 @@
 							</div>
 							<p>Do you like the project and you would like to see new software titles or new configuration features ?</p>
 							<p>Please add your request and ideas using this <a href="https://github.com/MichaIng/DietPi/issues/new/choose" target="_blank" rel="noopener">GitHub form</a>*.
-							   To be able to do it you would need to be logged in with your GitHub account.
+							   <br><i>* To be able to do it you would need to be logged in with your GitHub account.</i>
 							</p>
 						</div>
 					</div>
@@ -328,8 +330,8 @@
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv3">
 							<img src="images/contribute/question.jpg" alt="project 3" loading="lazy">
 							<i class="more"></i>
-							<h3>Help answering questions</h3>
-							<p>Answer questions, give feedback</p>
+							<h3>Answer questions</h3>
+							<p>Share feedback and insights</p>
 							<div class="mask"></div>
 						</a>
 					</div>
