--- a/contribute.html
+++ b/contribute.html
@@ -133,7 +133,12 @@
 									<li>Run an investigation (e.g. an installation issue on specific software title)</li>
 									<li>Provide an workaround to an existent issue</li>
 									<li>Give help when testing is required</li>
+									<li>Give your opinion on discussions in the issue tracker. It's a good opportunity to influence the future direction of DietPi.
 								</ul>
+								<br/>
+								<br/>Sometimes issues are created with missing information, or we are not able to replicate, or plain invalid. 
+								<br/>Help make them easier to resolve. Handling issues takes a lot of time that we could rather spend on fixing bugs and adding features.
+								<br/>
 								<br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or <a href="https://github.com/MichaIng/DietPi-Docs/issues" target="_blank" rel="noopener">DietPi documentation tasks on GitHub</a>.
 							</p>
 						</div>
@@ -243,8 +248,11 @@
 								<h3>Extend DietPi</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p>Would you like to fix a bug or help extending the DietPi project ?</p>
-							<p>Please find details here on how you could <a href="https://github.com/MichaIng/DietPi#contributing">contribute</a>.</p>
+							<p>Would you like to fix a bug or help extending the DietPi project ? 
+							   <br/><br/>You can use issue labels to discover issues you could help out with. Either for a specific hardware model: RPi4, ROCK64, ROCK PI S, Odroid C1, Odroid N1 etc. or Debian distribution
+							   <br/><br/>You may find an issue is assigned. Please double-check before starting on this issue because somebody else is likely already working on it.
+							</p>
+							<p>Please find here tips on <a href="https://github.com/MichaIng/DietPi#contributing">contributing code</a>.</p>
 						</div>
 					</div>
 				</div>
