--- a/contribute.html
+++ b/contribute.html
@@ -135,8 +135,9 @@
 									<li>Give help when testing is required</li>
 									<li>Give your opinion on discussions in the issue tracker. It's a good opportunity to influence the future direction of DietPi.
 								</ul>
-								<br/>
-								<br/>Sometimes issues are created with missing information, or we are not able to replicate, or plain invalid. 
+							</p>
+							<p>
+								Sometimes issues are created with missing information, or we are not able to replicate, or plain invalid. 
 								<br/>Help make them easier to resolve. Handling issues takes a lot of time that we could rather spend on fixing bugs and adding features.
 								<br/>
 								<br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or <a href="https://github.com/MichaIng/DietPi-Docs/issues" target="_blank" rel="noopener">DietPi documentation tasks on GitHub</a>.
@@ -157,9 +158,7 @@
 								<span class="show_hide close"></span>
 							</div>
 							<p>Start a discussion, ask and answer questions. There are many questions on <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi GitHub</a>, and also on <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener">Forum</a> for which you may have already the answers, or you could provide valuable insights.</p>
-							<p>
-								<br/><br/>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or browse different conversation topics on <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener"></a>DietPi Forums</a> and find the ones that interest you the most.
-							</p>
+							<p>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or browse different conversation topics on <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener"></a>DietPi Forums</a> and find the ones that interest you the most.</p>
 						</div>
 					</div>
 				</div>
