--- a/contribute.html
+++ b/contribute.html
@@ -247,11 +247,16 @@
 								<h3>Extend DietPi</h3>
 								<span class="show_hide close"></span>
 							</div>
-							<p>Would you like to fix a bug or help extending the DietPi project ? 
-							   <br/><br/>You can use issue labels to discover issues you could help out with. Either for a specific hardware model: RPi4, ROCK64, ROCK PI S, Odroid C1, Odroid N1 etc. or Debian distribution
+							<p><b>Would you like to fix a bug or help extending the DietPi project ?</b> 
+							   <br/><br/>You can use issue labels to discover issues you could help out with. Either for a specific hardware model: RPi4, ROCK64, ROCK PI S, Odroid C1, Odroid N1 etc. or Debian distribution.
 							   <br/><br/>You may find an issue is assigned. Please double-check before starting on this issue because somebody else is likely already working on it.
 							</p>
-							<p>Please find here tips on <a href="https://github.com/MichaIng/DietPi#contributing">contributing code</a>.</p>
+							<p>Once you find an issue you'd like to work on leave a comment so others are aware. We'll then assign that issue to you.
+                               <br/>You can certainly work on things that do not yet have an issue. However, if you're going to put in a lot of effort it's always better to discuss it first.
+							   <br/>When you're ready to get feedback on your work, open a draft pull request. It's fine if the work's not yet done, but please do let us know what's remaining.
+							</p>
+							<p>Please find here more details on <a href="https://github.com/MichaIng/DietPi#contributing">contributing code</a>.</p>
+							<p>Have fun !</p>
 						</div>
 					</div>
 				</div>
@@ -289,8 +294,9 @@
 								<span class="show_hide close"></span>
 							</div>
 							<p>Sometimes the easiest way to help, it is to share experience. It helps a lot to write about DietPi project, tell others about it.
-							   We embed relevant blog posts and youtube links in the documentation. There is also a dedicated <a href="https://dietpi.com/docs/references/">Reference page</a></p>
-							<p>Help spreading the word about DietPi project !</p>
+							   <br/>We embed relevant blog posts and youtube links in the documentation. There is also a dedicated <a href="https://dietpi.com/docs/references/">Reference page</a>
+							</p>
+							<p>Help spread the word about DietPi project !</p>
 						</div>
 					</div>
 				</div>
