--- a/contribute.html
+++ b/contribute.html
@@ -249,14 +249,11 @@
 							</div>
 							<p><b>Would you like to fix a bug or help extending the DietPi project ?</b> 
 							   <br/><br/>You can use issue labels to discover issues you could help out with. Either for a specific hardware model: RPi4, ROCK64, ROCK PI S, Odroid C1, Odroid N1 etc. or Debian distribution.
-							   <br/><br/>You may find an issue is assigned. Please double-check before starting on this issue because somebody else is likely already working on it.
+							   <br/><br/>You may find an issue is assigned. Please double-check before starting on this issue because somebody else is likely already working on it. Once you find an issue you'd like to work on leave a comment so others are aware. We'll then assign that issue to you.
+                               <br/><br/>When you're ready to get feedback on your work, open a draft pull request.							
 							</p>
-							<p>Once you find an issue you'd like to work on leave a comment so others are aware. We'll then assign that issue to you.
-                               <br/>You can certainly work on things that do not yet have an issue. However, if you're going to put in a lot of effort it's always better to discuss it first.
-							   <br/>When you're ready to get feedback on your work, open a draft pull request. It's fine if the work's not yet done, but please do let us know what's remaining.
-							</p>
-							<p>Please find here more details on <a href="https://github.com/MichaIng/DietPi#contributing">contributing code</a>.</p>
-							<p>Have fun !</p>
+							<p>Please find here more details on <a href="https://github.com/MichaIng/DietPi#contributing">contributing code</a>.
+							   <br/><br/>Have fun !</p>
 						</div>
 					</div>
 				</div>
