--- a/index.html
+++ b/index.html
@@ -1728,9 +1728,8 @@
 		<div class="section secondary-section" id="donate">
 			<div class="container-xl centered">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
-				<p class="large-text">DietPi is a free and open source product. We rely solely on your donations for funding.</p>
-				<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=6DVBECXRW3TAA" class="button" target="_blank" rel="noopener">Donate via PayPal</a>
-				<a href="https://www.patreon.com/bePatron?u=12464530" class="button" target="_blank" rel="noopener">Become a Patron</a>
+				<p class="large-text">Support DietPi with a contribution of any size ! Big or small, is so valuable for the project future !</p>
+				<a href="contribute.html" class="button">Contribute</a>
 			</div>
 		</div>
 		<!-- Donate section end -->
