--- a/contribute.html
+++ b/contribute.html
@@ -69,7 +69,7 @@
 				</div>
 				<div id="title-2" class="title">
 					<h1>Grow in 2021</h1>
-					<p>This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b style="color:#FFA500"> even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, MicroSD cards etc.), webhosting for Dietpi.com and future development. 
+					<p>This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b style="color:#FFA500"> even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, MicroSD cards etc.), web hosting for Dietpi.com and future development. 
 						<br/><br/> This allows us to continue working on DietPi, make it better with every new update.
 						<br/><br/>
 						<img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy"  width="200">
@@ -291,7 +291,7 @@
 								<span class="show_hide close"></span>
 							</div>
 							<p>Sometimes the easiest way to help, it is to share experience. It helps a lot to write about DietPi project, tell others about it.
-							   <br/>We embed relevant blog posts and youtube links in the documentation. There is also a dedicated <a href="https://dietpi.com/docs/references/">Reference page</a>
+							   <br/>We embed relevant blog posts and YouTube links in the documentation. There is also a dedicated <a href="https://dietpi.com/docs/references/">Reference page</a>
 							</p>
 							<p>Help spread the word about DietPi project !</p>
 						</div>
