--- a/contribute.html
+++ b/contribute.html
@@ -95,7 +95,7 @@
 				</nav>
 				<!-- Start details for portfolio project 1 -->
 				<div id="slidingdiv1" class="toggleDiv row single-project">
-					<div class="col-md-4"><img src="images/contribute/diagnose2.jpg" alt="Bug report" loading="lazy">/div>
+					<div class="col-md-4"><img src="images/contribute/diagnose2.jpg" alt="Bug report" loading="lazy"></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
