--- a/contribute.html
+++ b/contribute.html
@@ -193,7 +193,7 @@
 				<!-- End details for portfolio project 5 -->
 				<!-- Start details for portfolio project 6 -->
 				<div id="slidingdiv6" class="toggleDiv row single-project">
-					<div class="col-md-4"><img src="images/contribute/improve-docs.jpg" alt="VNC Server" loading="lazy"></a>/div>
+					<div class="col-md-4"><img src="images/contribute/improve-docs.jpg" alt="VNC Server" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
