Fix colour as intended

--- a/contribute.html
+++ b/contribute.html
@@ -70,7 +70,7 @@
 				<div id="title-2" class="title">
 					<h1>Grow in 2021</h1>
 					<p>
-						This month we are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b style="color:#FFA500"> even a small ones (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting for dietpi.com and future development. 
+						This month we are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b style="color:#0059ff"> even a small ones (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting for dietpi.com and future development. 
 						<br><br>This allows us to continue working on DietPi, make it better with every new update.
 						<br><br>
 						<img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy" width="200">
