Remove two obsolete </a> end tags

--- a/contribute.html
+++ b/contribute.html
@@ -148,7 +148,7 @@
 								<span class="show_hide close"></span>
 							</div>
 							<p>Start a discussion, ask and answer questions. There are many questions on <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi GitHub</a>, and also on <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener">Forum</a> for which you may have already the answers, or you could provide valuable insights.</p>
-							<p>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or browse different conversation topics on <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener"></a>DietPi Forums</a> and find the ones that interest you the most.</p>
+							<p>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or browse different conversation topics on <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener">DietPi Forums</a> and find the ones that interest you the most.</p>
 						</div>
 					</div>
 				</div>
@@ -193,7 +193,7 @@
 				<!-- End details for portfolio project 5 -->
 				<!-- Start details for portfolio project 6 -->
 				<div id="slidingdiv6" class="toggleDiv row single-project">
-					<div class="col-md-4"><img src="images/contribute/improve-docs.jpg" alt="VNC Server" loading="lazy"></a></div>
+					<div class="col-md-4"><img src="images/contribute/improve-docs.jpg" alt="VNC Server" loading="lazy"></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
