Make second and third title <h2> tags but assure black colour

--- a/contribute.html
+++ b/contribute.html
@@ -68,14 +68,12 @@
 					<p>Contributions are always welcome, no matter how small or large. You can do this in many ways and this page provides everything you need to get started!</p>
 				</div>
 				<div id="title-2" class="title">
-					<h1>Grow in 2021</h1>
+					<h2 style="color:#000">Grow in 2021</h2>
 					<p>
 						This month we are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b style="color:#0059ff"> even a small ones (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting for dietpi.com and future development. 
 						<br><br>This allows us to continue working on DietPi, make it better with every new update.
-						<br><br>
-						<img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy" width="200">
-						<br><br>
-						In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimisations. 
+						<br><br><img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy" width="200">
+						<br><br>In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimisations. 
 						<br><b>Enable us to grow in 2021!</b>
 					</p>
 					<p class="medium-text">
@@ -84,7 +82,7 @@
 					</p>
 				</div>
 				<div id="title-3" class="title">
-					<h1>Why contribute to DietPi as an open-source project?</h1>
+					<h2 style="color:#000">Why contribute to DietPi as an open-source project?</h2>
 					<p>You can improve the software you rely on. It's empowering to be able to make changes, even small ones: whether it's coding, documentation, testing, web design. If you're looking to help, there's something for you on here!</p>
 				</div>				
 				<nav class="nav nav-pills" id="downloadinfo" style="display:none">
@@ -131,8 +129,7 @@
 							<p>
 								Sometimes issues are created with missing information, or we are not able to replicate, or plain invalid. 
 								<br>Help make them easier to resolve. Handling issues takes a lot of time that we could rather spend on fixing bugs and adding features.
-								<br>
-								<br>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or <a href="https://github.com/MichaIng/DietPi-Docs/issues" target="_blank" rel="noopener">DietPi documentation tasks on GitHub</a>.
+								<br><br>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or <a href="https://github.com/MichaIng/DietPi-Docs/issues" target="_blank" rel="noopener">DietPi documentation tasks on GitHub</a>.
 							</p>
 						</div>
 					</div>
