--- a/contribute.html
+++ b/contribute.html
@@ -68,7 +68,7 @@
 					<p>Contributions are always welcome, no matter how small or large. You can do this in many ways and this page provides everything you need to get started!</p>
 				</div>
 				<div id="title-2" class="title">
-					<h2 style="color:#000">Grow in 2021</h2>
+					<h2 style="color:#181a1c">Grow in 2021</h2>
 					<p>
 						This month we are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b style="color:#0059ff"> even a small ones (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting for dietpi.com and future development. 
 						<br><br>This allows us to continue working on DietPi, make it better with every new update.
@@ -82,7 +82,7 @@
 					</p>
 				</div>
 				<div id="title-3" class="title">
-					<h2 style="color:#000">Why contribute to DietPi as an open-source project?</h2>
+					<h2 style="color:#181a1c">Why contribute to DietPi as an open-source project?</h2>
 					<p>You can improve the software you rely on. It's empowering to be able to make changes, even small ones: whether it's coding, documentation, testing, web design. If you're looking to help, there's something for you on here!</p>
 				</div>				
 				<nav class="nav nav-pills" id="downloadinfo" style="display:none">
