update contribute page

--- a/contribute.html
+++ b/contribute.html
@@ -5,22 +5,22 @@
 		<meta charset="utf-8">
 		<link rel="home" href="https://dietpi.com/">
 		<link rel="canonical" href="https://dietpi.com/contribute.html">
-		<title>DietPi-Software - Lightweight justice for your SBC!</title>
-		<meta name="description" content="Optimised | Simplified | For everyone - Easy to install and run optimised software for your SBC - Raspberry Pi, Odroid, PINE64 etc.!">
+		<title>Contribute to DietPi</title>
+		<meta name="description" content="Optimised | Simplified | For everyone - There are many ways you could support DietPi, with a contribution of any size !">
 		<!-- Twitter meta tags: https://developer.twitter.com/docs/twitter-for-websites/cards -->
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@DietPi_">
 		<meta name="twitter:creator" content="@DietPi_">
-		<meta name="twitter:title" content="Lightweight justice for your SBC!">
-		<meta name="twitter:description" content="Optimised | Simplified | For everyone - Easy to install and run optimised software for your SBC - Raspberry Pi, Odroid, PINE64 etc.!">
+		<meta name="twitter:title" content="DietPi - Lightweight justice for your SBC!">
+		<meta name="twitter:description" content="Optimised | Simplified | For everyone - There are many ways you could support DietPi, with a contribution of any size !">
 		<meta name="twitter:image" content="https://dietpi.com/images/dietpi-logo_720x720.png">
 		<!-- Open Graph meta tags: https://developers.facebook.com/docs/sharing/webmasters -->
 		<meta property="og:locale" content="en_GB">
 		<meta property="og:site_name" content="DietPi-Software">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://dietpi.com/contribute.html">
-		<meta property="og:title" content="Lightweight justice for your SBC!">
-		<meta property="og:description" content="Optimised | Simplified | For everyone - Backed by community, DietPi is a minimal OS image for SBCs - Raspberry Pi, Odroid, PINE64 etc. Install software optimised for you!">
+		<meta property="og:title" content="DietPi - Lightweight justice for your SBC!">
+		<meta property="og:description" content="Optimised | Simplified | For everyone - There are many ways you could support DietPi, with a contribution of any size !">
 		<meta property="og:image" content="https://dietpi.com/images/dietpi-logo_720x720.png">
 		<!-- Adjust width based on screen size -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -70,10 +70,10 @@
 				<div id="title-2" class="title">
 					<h2 style="color:#181a1c">Grow in 2021</h2>
 					<p>
-						This month we are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b style="color:#0059ff"> even a small ones (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting for dietpi.com and future development. 
+						We are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b style="color:#0059ff"> even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting and future development. 
 						<br><br>This allows us to continue working on DietPi, make it better with every new update.
 						<br><br><img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy" width="200">
-						<br><br>In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimisations. 
+						<br><br>In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimisations. There are over <a href="https://dietpi.com/survey/" target="_blank" rel="noopener">110000</a> systems running DietPi.
 						<br><b>Enable us to grow in 2021!</b>
 					</p>
 					<p class="medium-text">
