Remove obsolete DietPi subforum from URL

--- a/index.html
+++ b/index.html
@@ -1703,7 +1703,7 @@
 						</a>
 					</div>
 					<div class="col-sm-4 service">
-						<a href="https://dietpi.com/phpbb/viewforum.php?f=5" target="_blank" rel="noopener">
+						<a href="https://dietpi.com/phpbb/" target="_blank" rel="noopener">
 							<svg viewBox="0 0 28 28" aria-hidden="true">
 								<path d="M17.75 18a1.75 1.75 0 0 1 1.75 1.75v2.002l-.008.108c-.311 2.126-2.221 3.149-5.425 3.149-3.193 0-5.133-1.011-5.552-3.112L8.5 21.75v-2A1.75 1.75 0 0 1 10.25 18h7.5zm.494-6h6.006A1.75 1.75 0 0 1 26 13.75v2.002l-.008.108c-.311 2.126-2.221 3.149-5.425 3.149l-.168-.002c-.309-1.103-1.288-1.926-2.47-2.002L17.75 17l-.922.001A4.49 4.49 0 0 0 18.5 13.5c0-.526-.09-1.031-.256-1.5zM3.75 12h6.006c-.166.469-.256.974-.256 1.5a4.49 4.49 0 0 0 1.496 3.351l.176.15L10.25 17a2.75 2.75 0 0 0-2.649 2.009h-.034c-3.193 0-5.133-1.011-5.552-3.112L2 15.75v-2A1.75 1.75 0 0 1 3.75 12zM14 10a3.5 3.5 0 1 1 0 7 3.5 3.5 0 1 1 0-7zm6.5-6a3.5 3.5 0 1 1 0 7 3.5 3.5 0 1 1 0-7zm-13 0a3.5 3.5 0 1 1 0 7 3.5 3.5 0 1 1 0-7z"/>
 							</svg>
