Align installer image file name and minor wording

--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
 								<div><span>RAM:</span>Host system dependent</div>
 								<br>
 								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Buster.7z"><span>Installer Image:</span><i class="fa fa-download" aria-hidden="true"></i><u>Download</u></a>
+									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Buster_Installer.7z"><span>Installer Image:</span><i class="fa fa-download" aria-hidden="true"></i><u>Download</u></a>
 									<br>Flash to e.g. a USB stick to boot and install DietPi to internal drive.
 								</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book" aria-hidden="true"></i><u>View</u></a></div>
@@ -1068,9 +1068,9 @@
 								<br>
 								<div><a href="https://dietpi.com/docs/dietpi_sbc/#make-your-own-distribution" target="_blank" rel="noopener"><span>Install Guide:</span><i class="fa fa-book" aria-hidden="true"></i><u>View</u></a></div>
 							</div>
-							<p>Unable to find an available image for your device? Don’t worry, DietPi contains a script which can be used to turn an installed Debian-based OS into DietPi.</p>
+							<p>Unable to find an available image for your device? Don't worry, DietPi contains a script which can be used to turn an installed Debian-based OS into DietPi.</p>
 							<p>Simply follow the instructions.</p>
-							<p><i style="color:grey;font-size: 80%;">NB: End user support will be limited to issues that are DietPi specific (which excludes Kernel/GPU/onboard Bluetooth, WiFi, Audio etc from our support). GPU features are disabled for other devices (e.g.: Kodi, Desktop), ideal for server usage.</i></p>
+							<p><i style="color:grey;font-size:80%;">NB: End user support is limited to DietPi-specific issues, which excludes kernel and onboard hardware related issues.</i></p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/otherdevice.jpg" alt="Question mark" loading="lazy"></div>
 					</div>
