--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<span>DietPi-PREP:</span>Convert any Debian image, into a DietPi system.
+								<div><span>DietPi-PREP:</span>Convert any Debian image, into a DietPi system.</div>
 								<br>
 								<div><a href="https://dietpi.com/docs/dietpi_sbc/#make-your-own-distribution" target="_blank" rel="noopener"><span>Install Guide:</span><i class="fa fa-book" aria-hidden="true"></i><u>View</u></a></div>
 							</div>
