--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 			<div class="container-xl">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Start slide -->
-				<div class="da-slide">
-					<h2>Support DietPi</h2>
-					<h4>Available to everyone, funded by contributors !</h4>
-					<p>DietPi is an open source product and it is free to use. We are sustained by donations and even a small one (<b>as little as the price of a cup of coffee</b>) would help the things move forward, covering the costs !</p>
-					<a href="contribute.html" class="da-link" target="_blank" rel="noopener">Learn more</a>
-					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
+				<div class="da-slide da-slide-current">
+					<h2>DietPi 7 is now released !</h2>
+					<h4>Essential upgrade to be in sync with latest platform updates</h4>
+					<p>Try out this latest version ! More changes together with few new software titles: Steam for ARM processors is now available, together with a lightweight JPEG streamer. You can also run Docker Compose on DietPi to run multi-container Docker applications.</p>
+					<a href="https://dietpi.com/docs/release-notes/#february-2021-version-70" class="da-link" target="_blank" rel="noopener">Learn more</a>
+					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" width="300" alt="DietPi logo" loading="lazy"></div>
 				</div>
 				<!-- End slide -->
 				<!-- Start slide -->
