--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<h4>Essential upgrade to be in sync with latest platform updates</h4>
 					<p>DietPi brings today more joy enabling Steam & Box86, and it also makes your SBC more powerful, running multi-container apps with Docker Compose ! Checkout the latest DietPi updates now !</p>
 					<a href="https://dietpi.com/docs/release-notes/#february-2021-version-70" class="da-link" target="_blank" rel="noopener">See what's new</a>
-					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" width="300" alt="DietPi logo" loading="lazy"></div>
+					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- End slide -->
 				<!-- Start slide -->
